--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -27,3 +27,13 @@ body {
   background-color: #077C6E;
   border-radius: 50px;
 }
+
+.basic {
+  margin: 30px 15px;
+  color: #202020;
+
+  font-family: 'JosefinSans-Regular', sans-serif;
+  text-transform: uppercase;
+  
+  font-size: 1.05em;
+}
