--- a/frontend/src/styles/category.css
+++ b/frontend/src/styles/category.css
@@ -13,6 +13,11 @@
     border-radius: 10px;
 }
 
+.category:hover {
+    box-shadow: 0px 0px 10px #20202049;
+    transition: all 0.3s ease-in-out;
+}
+
 .imgCategory {
     width: 100%;
     height: auto; /* <<< Isso mantém a proporção */
@@ -28,8 +33,13 @@
     font-weight: 500;
 
     text-transform: uppercase;
+    text-decoration: none;
     text-align: center;
     color: #202020;
 
     margin: 15px 0px 0px 0px;
+}
+a:-webkit-any-link {
+    text-decoration: none;
+    cursor: pointer;
 }
