--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -34,6 +34,22 @@ body {
 
   font-family: 'JosefinSans-Regular', sans-serif;
   text-transform: uppercase;
+
+  font-size: 1.05em;
+}
+
+.basicTitle {
+  width: 45%;
+
+  margin: 10px 15px 40px 0px;
+  padding: 14px 15px 10px 15px;
+  color: #fff;
+
+  font-family: 'JosefinSans-Regular', sans-serif;
+  text-transform: uppercase;
   
   font-size: 1.05em;
+  background-color: #077C6E;
+
+  border-radius: 0px 5px 5px 0px;
 }
