--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -49,6 +49,7 @@ body {
   text-transform: uppercase;
   
   font-size: 1.05em;
+  font-weight: 700;
   background-color: #077C6E;
 
   border-radius: 0px 5px 5px 0px;
