--- a/frontend/src/styles/category.css
+++ b/frontend/src/styles/category.css
@@ -43,3 +43,29 @@ a:-webkit-any-link {
     text-decoration: none;
     cursor: pointer;
 }
+
+
+
+
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    max-width: 150px;
+    min-width: 120px;
+    height: 180px;
+    padding: 20px;
+
+    background-color: #fff;
+
+    box-shadow: 0px 0px 3px #20202049;
+    border-radius: 10px;
+}
+
+.product:hover {
+    box-shadow: 0px 0px 10px #20202049;
+    transition: all 0.3s ease-in-out;
+}
