--- a/frontend/src/styles/section.css
+++ b/frontend/src/styles/section.css
@@ -4,12 +4,11 @@
 
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     background-color: #f0f0f0;
 
     column-gap: 20px;
-
 }
 
 .sideBar {
@@ -20,19 +19,26 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.filter {
+    width: 100;
+    background-color: #fff;
+    padding: 5px 10px;
+    margin: 10px 0px;
+
+    border-radius: 5px;
+}
+
 .secProdutos {
     width: 80%;
     max-width: 100vw;
     background-color: #fff;
-    padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.dadosManager {
+.pesquisaDadosManager {
     width: 100;
     background-color: #fff;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
