--- a/frontend/src/styles/category.css
+++ b/frontend/src/styles/category.css
@@ -1,11 +1,16 @@
-.category {
+img {
+    overflow-clip-margin: content-box;
+    overflow: hidden;
+}
+
+.category{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     max-width: 180px;
-    padding: 20px;
+    padding: 16px;
 
     background-color: #fff;
 
@@ -19,53 +24,46 @@
 }
 
 .imgCategory {
+    aspect-ratio: 145 / 119;
     width: 100%;
-    height: auto; /* <<< Isso mantém a proporção */
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 160px;
     border-radius: 10px;
-    object-fit: contain; /* Ou 'cover' dependendo do efeito desejado */
+    object-fit: contain; /* Ou 'c'over'' dependendo do efeito desejado */
   }
 
 .textCategory {
     font-family: 'JosefinSans-Regular', sans-serif;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
 
-    text-transform: uppercase;
+    text-transform: lowercase;
     text-decoration: none;
-    text-align: center;
+    text-align: left;
     color: #202020;
 
     margin: 15px 0px 0px 0px;
+    height: 5vh;
 }
+.textCategory::first-letter {
+    text-transform: uppercase;
+}
+
+.textPrice {
+    font-family: 'JosefinSans-Regular', sans-serif;
+    font-size: 1.15rem;
+    font-weight: 600;
+
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: left;
+    color: #202020;
+
+    margin: 30px 0px 0px 0px;
+    width: 100%;
+
+}
+
 a:-webkit-any-link {
     text-decoration: none;
     cursor: pointer;
-}
-
-
-
-
-
-.product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    max-width: 150px;
-    min-width: 120px;
-    height: 180px;
-    padding: 20px;
-
-    background-color: #fff;
-
-    box-shadow: 0px 0px 3px #20202049;
-    border-radius: 10px;
-}
-
-.product:hover {
-    box-shadow: 0px 0px 10px #20202049;
-    transition: all 0.3s ease-in-out;
 }
