--- a/frontend/src/styles/section.css
+++ b/frontend/src/styles/section.css
@@ -42,3 +42,23 @@
     padding: 10px;
     border-radius: 5px;
 }
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    max-width: 160px;
+    padding: 18px;
+
+    background-color: #fff;
+
+    box-shadow: 0px 0px 3px #20202049;
+    border-radius: 10px;
+}
+
+.product:hover {
+    box-shadow: 0px 0px 10px #20202049;
+    transition: all 0.3s ease-in-out;
+}
